# Spiderman2Browser

./: .gitignore  CMakeLists.txt  README.md  fb_dump.ppm  ida_draw.txt  ida_slot.txt  imgui.ini  liz_strings.txt  mat_strings_report.txt  xbx_mesh_list.txt  xbx_viewer.cfg
Archive/: desktop.ini
animations/BLACK_CAT_PACK/: BCATTACKQ.txt  BCATTACKQQ.txt  BCATTACKQQQ.txt  BCIDL.txt  BCIDL2SWG.txt  BCIDL2ZIP.txt  BCIDLRLX.txt  BCIDLRLXFID1.txt  BCIDLWALL.txt  BCIDLWALL2ZIP.txt  BCJMPFLY.txt  BCJMPLNCH.txt
extracted_models/ARMORED_THUG/: ARMORED_THUG_00000003.xbx  ARMORED_THUG_00000003_source.txt
extracted_models/CITY_EXTRA_J/: BETTY_B_00000002.xbx  BETTY_B_00000002_source.txt  JONAH_J_00000002.xbx  JONAH_J_00000002_source.txt  PED_FEM_TRNDY_00000002.xbx  PED_FEM_TRNDY_00000002_source.txt  PED_MALE_REPORTER_00000002.xbx  PED_MALE_REPORTER_00000002_source.txt  ROBBIE_R_00000002.xbx  ROBBIE_R_00000002_source.txt
extracted_models/SPIDERMAN/: SPIDERMAN.xbx  SPIDERMAN_source.txt
extracted_models/STORY_12_CUTSCENE/: MARYJANE_DRESSY_00000002.xbx  MARYJANE_DRESSY_00000002_source.txt
extracted_models/STORY_19_P2/: DOCOCK_00000002.xbx  DOCOCK_00000002_source.txt
extracted_models/SW_ENDURANCE_ROUND_FOUR_PACK/: MINION_LIZARD_00000003.xbx
src/: Animation.cpp  Animation.h  App.cpp  App.h  Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Skeleton.cpp  Skeleton.h  Texture.cpp  Texture.h  UI.cpp  UI.h  WorldParser.cpp  WorldParser.h  XBXParser.cpp  XBXParser.h  main.cpp
src/core/: App.cpp  App.h  AppAnimation.inl  AppInit.inl  AppRun.inl  AppSelection.inl  AppSkinAndExports.inl  AppWorld.inl  main.cpp
src/export/: ModelExporter.cpp  ModelExporter.h  ModelExporterCommon.inl  ModelExporterFbx.inl  ModelExporterFbxHelpers.inl  ModelExporterGlb.inl  ModelExporterGlbHelpers.inl
src/io/: Vfs.cpp  Vfs.h
src/parsers/: Animation.cpp  Animation.h  AnimationEntropy.inl  AnimationLoad.inl  AnimationSampling.inl  AnimationTables.inl  Skeleton.cpp  Skeleton.h  WorldParser.cpp  WorldParser.h  XBXParser.cpp  XBXParser.h  XBXParserHelpers.inl  XBXParserLoad.inl
src/render/: Camera.h  Renderer.cpp  Renderer.h  RendererCore.inl  RendererDraw.inl  RendererInstancing.inl  Texture.cpp  Texture.h
src/ui/: UI.cpp  UI.h  UIConfig.inl  UIDraw.inl  UIMaterial.inl
tools/: ida.ps1  ida_post.ps1
